content/examples/kubernetes/istio/virtual-services.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: pomerium
spec:
  gateways:
    - istio-system/internal-gateway
  hosts:
    - grafana.example.com
  http:
    - route:
        - destination:
            host: pomerium-proxy
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authenticate-virtual-service
  namespace: pomerium
spec:
  gateways:
    - istio-system/internal-gateway
  hosts:
    - authenticate.example.com
  http:
    - route:
        - destination:
            host: pomerium-authenticate
            port:
              number: 80
---
